more installation info