@@ -1,6 +1,6 @@
 # Overview
 
-Metabase is a server process that can be run on anywhere that you can run a Java jar. On installation it will have three main portions. First off is the Jar containing the server code. The most recent stable version can be download from [Metabase Downloads](http://wwww.metabase.com/downloads). Next there will need to be a place where Metabase can store persistent data, or its Application Database. Once the server is up and running with a place to store application data, you can connect to one or more Databases. 
+The Metabase server can be run anywhere that you can run a Java jar. On installation it will have three main portions. First off is the Jar containing the server code. The most recent stable version can be download from [Metabase Downloads](http://wwww.metabase.com/downloads). Next there will need to be a place where Metabase can store persistent data, or its Application Database. Once the server is up and running with a place to store application data, you can connect to one or more Databases. 
 
 
 # Application database
@@ -59,23 +59,38 @@ There are a number of ways to run Metabase in production.
 
 ### Elastic Beanstalk
 
-[Elastic Beanstalk Installation Recipe](installing-on-elastic-beanstalk.md).
+See [Elastic Beanstalk Installation Recipe](installing-on-elastic-beanstalk.md) for detailed step by step instructions to install Metabase on Elastic Beanstalk.
 
-### running a container
+### Running in a container
 
-injecting database variables vs using an embedded database
+When running on a container, you'll typically want to use a separate database, and pass in the variables. If you wish to store the application database on the container host filesystem, you can using something similar to the below in your docker file:
+    
+    FROM ubuntu:trusty
+    ENV LC_ALL C
+    ENV DEBIAN_FRONTEND noninteractive
+    ENV DEBCONF_NONINTERACTIVE_SEEN true
+    ENV MB_JETTY_HOST 0.0.0.0
+    ENV MB_JETTY_PORT 3000
+    ENV DB_FILE_NAME /app/files/metabase
 
-### running the jar using `screen`
+    VOLUME ["/app/files"]
 
-where to put the database?
+    EXPOSE 3000
+
+    RUN apt-get update && \
+        apt-get install -y openjdk-7-jre
+
+    ADD ./metabase-0.10.0.jar /app/
+    ENTRYPOINT ["java", "-Dlogfile.path=target/log", "-XX:+CMSClassUnloadingEnabled", "-XX:+UseConcMarkSweepGC", "-jar", "/app/metabase-0.10.0.jar"]
+
+
+### Running the jar using `screen` or as a daemon
+
+If you Know What You're Doing, you can run the jar however it is you usually deploy JVM applications. 
 
 ###  HTTPS!
 
-Regardless of how you deploy Metabase, it is *strongly* recommended that you use HTTPS for all traffic. If you are using 
-
-    * if beanstalk, use an ELB and terminate there
-    * otherwise, recommend nginx as a proxy + provide instructions
-
+Regardless of how you deploy Metabase, it is *strongly* recommended that you use HTTPS for all traffic. If you are using Elastic Beanstalk or AWS, we recommend you use ELB and terminate the HTTPS connection there. Otherwise, you can use nginx as a reverse proxy and terminate there.
 
 
 # Connecting to Data Warehouses
